--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
-# Ignore videos
+# Python
+__pycache__/
+*.pyc
+*.db
+
+# Videos
 frontend/public/videos/
 
-# Ignore database
-backend/test.db
+# Node
+node_modules/
 
-# Ignore python cache
-**/__pycache__/
-*.pyc
+# Env
+.env
